--- a/css/style.css
+++ b/css/style.css
@@ -1431,6 +1431,10 @@ ul .dellivery_company {
     margin: 0;
 }
 
+.catalog_items_info .prof_selfi {
+    width: 237px;
+}
+
 .catalog_items_info span {
     margin-left: auto;
 }
@@ -1829,18 +1833,12 @@ fieldset {
   }
   
   .price-controls {
-    position: relative;
-    
-    height: 36px;
-    
-    font-size: 0;
-  
-    border-radius: 2px;
+    margin-top: 10px;
   }
   
   .price-controls label {
     display: inline-block;
-  
+    font-family: gilroy, "Arial", sans-serif;
     font-size: 14px;
     line-height: 34px;
     vertical-align: top;
@@ -1887,8 +1885,8 @@ fieldset {
     position: absolute;
     left: 0;
     top: -8px;
-    width: 4px;
-    height: 4px;
+    width: 20px;
+    height: 20px;
     padding: 0;
   
     border: 8px solid #ffffff;
@@ -1896,6 +1894,11 @@ fieldset {
     box-shadow: 0 2px 1px 0 #cfcfcf;
     border-radius: 50%;
     cursor: pointer;
+  }
+
+  .range-toggle:active {
+      width: 22px;
+      height: 22px;
   }
 
   .range-toggle-min {
